# nanomsg_demo

./: CMakeLists.txt  main.c
nanomsg/: CMakeLists.txt
nanomsg/transports/ipc/: bipc.c
